name:          coda-syntax-dyck-mixin
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: >= 2
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      Syntax for the coda compiler
description:   Syntax for the coda compiler

extra-source-files: .hlint.yaml

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

-- build a dyck language monoid for a given token type
library
  default-language: Haskell2010
  ghc-options: -Wall
  signatures: Token
  exposed-modules: Dyck
  build-depends:
    base,
    coda-algebra,
    comonad,
    data-default,
    hashable,
    lens,
    text
