name:          coda-syntax-token
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: >= 2
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      Syntax for the coda compiler
description:   Syntax for the coda compiler

extra-source-files: .hlint.yaml

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

-- a token type for a haskell-like language
library
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules: Coda.Syntax.Token
  build-depends:
    base,
    coda-algebra,
    coda-syntax-common,
    containers,
    data-default,
    lens,
    text
