name:          bdd
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: 2
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      ROBDDs
description:   Reduced ordered binary decision diagrams with optimized negation

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

library
  default-language: Haskell2010
  ghc-options: -Wall

  exposed-modules:
    Data.BDD
    Ersatz.Solver.BDD

  other-modules:
    Data.Bimap
    Data.List.Skew

  build-depends:
    base                 >= 4.10     && < 5,
    containers           >= 0.5      && < 0.6,
    ersatz               >= 0.4      && < 1,
    hashable             >= 1.2.6    && < 1.3,
    reflection           >= 2.1      && < 3,
    transformers         >= 0.5      && < 0.6,
    unordered-containers >= 0.2.6    && < 3

executable factor
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: examples
  main-is: factor.hs
  build-depends:
    base,
    bdd,
    ersatz,
    mtl

executable fish
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: examples
  main-is: fish.hs
  build-depends:
    base,
    bdd,
    containers,
    ersatz,
    mtl
