name:          coda-automata
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: 2
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      Automata
description:   See the main coda package for more details.

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

library
  default-language: Haskell2010
  ghc-options: -Wall

  exposed-modules:
    Coda.Automata.Presburger
    Coda.Automata.Internal
    Coda.Automata.NFA
    Coda.Automata.DFA
    Coda.Set.Lazy

  build-depends:
    base                 >= 4.10     && < 5, 
    containers           >= 0.5.9.2  && < 0.6,
    contravariant        >= 1.4      && < 2,
    deepseq              >= 1.4.3    && < 1.5,
    lens                 >= 4.15     && < 5
