name:          coda-common
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: 2
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      Part of the coda compiler
description:   See the main coda package for more details.

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

library
  default-language: Haskell2010
  ghc-options: -Wall

  exposed-modules:
    Coda.Algebra.Ordered
    Coda.Algebra.Zero
    Coda.FingerTree
    Coda.Relative.Delta.Type
    Coda.Syntax.Alex
    Coda.Syntax.FromText
    Coda.Syntax.Name
    Coda.Syntax.Prefix
    Coda.Syntax.Sharing
    Coda.Util.Bits
    Coda.Util.BitQueue
    Coda.Version

  other-modules: Paths_coda_common
  autogen-modules: Paths_coda_common

  build-depends:
    base                 >= 4.10     && < 5,
    data-default         >= 0.7.1.1  && < 0.8,
    ghc-prim,
    hashable             >= 1.2.6    && < 1.3,
    lens                 >= 4.15     && < 5,
    text                 >= 1.2      && < 1.3
