name:          coda-console
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: 2
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      Part of the coda compiler
description:   This package provides the REPL for the coda compiler.

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Coda.Console
    Coda.Console.Command
    Coda.Console.Completion
    Coda.Console.Options
    Coda.Console.Pretty
    Coda.Console.Unicode
  build-depends: coda-common, coda-lsp, coda-syntax
  build-depends:
    ansi-wl-pprint       >= 0.6      && < 0.7,
    base,
    containers,
    data-default,
    exceptions           >= 0.8.2.1  && < 0.9,
    haskeline            >= 0.7.4    && < 0.8,
    hyphenation          >= 0.7      && < 0.8,
    lens,
    mtl,
    optparse-applicative >= 0.13     && < 0.15,
    split                >= 0.2      && < 0.3,
    text
