name:          coda-lsp
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: 2
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      Coda - Language Server Protocol
description:   This provides an implementation of Microsoft's Language Server Protocol for Coda.

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

library
  default-language: Haskell2010

  exposed-modules:
    Language.Server.Builder
    Language.Server.Parser
    Language.Server.Protocol

  other-modules:
    Language.Server.TH

  build-depends:
    aeson >= 1.1 && < 1.3,
    base >= 4.10 && < 5,
    bytestring ^>= 0.10.8,
    data-default ^>= 0.7.1.1,
    hashable ^>= 1.2.6,
    lens >= 4.15 && < 5,
    lens-aeson ^>= 1.0.2,
    template-haskell ^>= 2.12,
    text ^>= 1.2,
    unordered-containers ^>= 0.2,
    uri-encode ^>= 1.5.0.5
