name:          coda-rope
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: 2
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      Coda rope and document store mixin
description:   
  This backpack mixin package supplies a document store for a particular monoidal lexer.
  .
  See the main coda package for more details.

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  signatures: Dyck Lexer Summary
  exposed-modules: Document Rope
  build-depends: coda-algebra, coda-common, coda-lsp
  build-depends: base, comonad, data-default, hashable, lens, mtl, profunctors, text, unordered-containers
