name:          coda-set
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: 2
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      Unpacked sets via backpack
description:   This backpack mixin package supplies unpacked sets exploiting backpack's ability to unpack through signatures.

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  signatures: Elem
  exposed-modules: Set.Internal
  build-depends:
    base >= 4.10 && < 5,
    data-default >= 0.2 && < 0.8,
    deepseq >= 1.4 && < 1.5,
    lens >= 4 && < 5
