name:          coda-syntax
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: 2
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      The lexer for coda source files
description:   See the main coda package for more details.

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: coda-common, coda-lexer, coda-rope, coda-summary-unit

  mixins:
    coda-summary-unit (Summary as Coda.Syntax.Summary)
      requires (Dyck as Coda.Syntax.Dyck),
    coda-rope (Document as Coda.Syntax.Document, Rope as Coda.Syntax.Rope)
      requires (Dyck as Coda.Syntax.Dyck, Lexer as Coda.Syntax.Lexer, Summary as Coda.Syntax.Summary)

  reexported-modules:
    Coda.Syntax.Alex,
    Coda.Syntax.Document,
    Coda.Syntax.Dyck,
    Coda.Syntax.Lexer,
    Coda.Syntax.FromText,
    Coda.Syntax.Name,
    Coda.Syntax.Prefix,
    Coda.Syntax.Rope,
    Coda.Syntax.Summary,
    Coda.Syntax.Token
